2005-10-26 Anatoly Sokolov <aesok@pautinka.net>

	* libc/string/strchr.S: Make labels local, add Id line, 
	use movw when possible, use X_movw instead LOAD_Z.
	* libc/string/strrchr.S: (Ditto.)
	* libc/string/strstr.S: use movw when possible, 
	use X_movw instead LOAD_X/LOAD_Z.

2005-10-25 Anatoly Sokolov <aesok@pautinka.net>

	* configure.ac: add tests for the AT90CAN32/64 support
	* devtools/gen-avr-lib-tree.sh: add support for AT90CAN32/64.
	* include/avr/io.h: (Ditto.) 
	* include/avr/wdt.h: (Ditto.)
	* include/avr/iocan32.h: new file.
	* include/avr/iocan64.h: new file.
	* include/avr/iocan128.h: move SFR, bits and interupts definitions
	from here ..
	* include/avr/iocanxx.h: .. to here. new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for AT90CAN32/64.
	* doc/api/using-tools.dox: (Ditto.)

2005-10-24 Anatoly Sokolov <aesok@pautinka.net>

	* devtools/gen-avr-lib-tree.sh: Change optimisation level for
	building libraries for 'avr2' and 'avr4' architectures 
	to 'CFLAGS_SPACE'.

2005-10-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version.
	* include/avr/iomxx0_1.h: Fix some lost #ifdefs.
	* include/avr/iomxx4.h: Fix some lost #ifdefs.
	* doc/api/interrupts.dox: Document we now have two styles
	of interrupt vector names; omit the hardcoded table of
	vector names.
	* doc/api/vectortable.dox: New file, automatically generated
	by xml/patch-headers.py.
	* doc/api/Makefile.am: tweak for new vector table.

2005-10-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io1200.h: add new (XXX_vect) vector names.
	* include/avr/io2313.h: (Ditto.)
	* include/avr/io2323.h: (Ditto.)
	* include/avr/io2333.h: (Ditto.)
	* include/avr/io2343.h: (Ditto.)
	* include/avr/io4414.h: (Ditto.)
	* include/avr/io4433.h: (Ditto.)
	* include/avr/io4434.h: (Ditto.)
	* include/avr/io8515.h: (Ditto.)
	* include/avr/io8535.h: (Ditto.)
	* include/avr/io86r401.h: (Ditto.)
	* include/avr/io90pwmx.h: (Ditto.)